--- a/main.html
+++ b/main.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Internship Application Form</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- Bootstrap 5 CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <style>
+    .form-container {
+      max-width: 600px;
+      margin: 30px auto;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container form-container">
+    <h3 class="mb-4">Internship Application Form</h3>
+    <form class="needs-validation" novalidate>
 
-</body>
+      <!-- First Name -->
+      <div class="mb-3">
+        <label for="first-name-input" class="form-label">First Name</label>
+        <input type="text" class="form-control" id="first-name-input" required>
+        <div class="invalid-feedback">
+          Please enter your first name.
+        </div>
+      </div>
 
-</html>
+      <!-- Last Name -->
+      <div class="mb-3">
+        <label for="last-name-input" class="form-label">Last Name</label>
+        <input type="text" class="form-control" id="last-name-input" required>
+        <div class="invalid-feedback">
+          Please enter your last name.
+        </div>
+      </div>
+
+      <!-- Email -->
+      <div class="mb-3">
+        <label for="email-input" class="form-label">Email</label>
+        <inp
